--- a/css/styles.css
+++ b/css/styles.css
@@ -1,134 +1,87 @@
-/***************************** classes*************************************** */
+/* body */
 .bg {
-  height: 100%;
-  width: 100%;
+  background-image: url("../images/indexbg.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("../images/indexbg.png");
+  height: 100%;
+}
+
+
+
+
+/* navigation bar */
+
+.nav-class {
+  margin-top : 3%;
+  font-size: 1rem;
+  font-weight: 600;
+
+  color: white;
+
+}
+
+.nl-class {
+  background-color: #8BFFFF;
+  border-radius: 20px;
+  text-align: center;
+  margin: 0 10px;
+  width: 100px;
+}
+
+.navbar-brand {
+  font-size: 2rem;
+  padding: 0 100px;
+  font-family: "Ubuntu";
+  font-weight: 800;
+}
+
+.togglebtn {
+  height: 30px;
+  width: 30px;
 }
 
 @media (max-width: 1028px) {
-  .btn-blue {
-    position: relative;
-    left: 70%;
-    color: #0066cc;
-    background-color: #8bffff;
+  .navbar-brand {
+    font-size: 2rem;
+    padding: 0 10px;
     font-family: "Ubuntu";
-    border-radius: 80px;
-    width: 120px;
-    height: 33px;
+    font-weight: 800;
+  }
+  .navul {
+    margin-right: auto;
+  }
+  .nl-class {
+    margin: 2% 2%;
+    margin-left: auto;
+  }
+
+}
+
+@media (min-width: 1028px) {
+  .left {
+    border-right: 5px solid #10386C;
+    padding: 0 2.4%;
+  }
+  .leftcol {
+    padding: 0 70px;
+    opacity: 0.5;
+    font-weight: bold;
+    color: #10386C;
+  }
+  .lastnl {
+    margin-right: 150px;
+  }
+  .middle {
+    padding: 5% 0;
   }
 }
 
-.btn-blue {
-  padding: 2% 0;
-  margin: 10px 0;
-  color: #0066cc;
-  background-color: #8bffff;
-  font-family: "Ubuntu";
-  border-radius: 80px;
-  width: 120px;
-  height: 33px;
-  text-align: center;
-}
 
-.bottom-container {
-  font-size: 1.2rem;
-  margin-top: 20px;
-  color: #0066cc;
-  text-align: center;
-  margin-bottom: 5%;
+/* footer */
+
+.footer {
 }
 
 .footer-link {
   margin-right: 20px;
 }
-
-.card {
-  color: #0066cc;
-  background-color: inherit;
-  border: none;
-  margin-left: 70px;
-}
-
-.footer {
-  margin-top: 100px;
-  background: inherit;
-}
-
-.logo {
-  height: 50vh;
-  width: 55vw;
-  padding-left: 50px;
-  color:  #0066ff;
-}
-
-.mcontent {
-  border-right: 5px solid #10386C;
-  height: 45vh;
-  margin-top: 20px;
-}
-
-.mcontent-info {
-  padding-top: 70px;
-  padding-left: 30px;
-  text-align: center;
-  height: 50%;
-}
-
-.middle {
-  width: 70rem;
-}
-
-.transbox {
-  background-color: #ffffff;
-  border-radius: 5px;
-  opacity: 0.5;
-  filter: alpha(opacity=60); /* For IE8 and earlier */
-}
-
-.transbox p, .transbox h3 {
-  font-weight: bold;
-  margin: 0 0;
-  color: #0066cc;
-}
-
-.transbox h3 {
-  margin-bottom: 3%;
-}
-
-.transbox p {
-  font-size: 14px;
-}
-
-
-
-
-
-
-
-
-
-/***************************** ids*************************************** */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/***************************** tags*************************************** */
