--- a/css/style3.css
+++ b/css/style3.css
@@ -10,6 +10,8 @@ body {
   font-weight: bold;
 }
 
+
+
 /* carousel */
 @media (max-width: 1028px) {
   .carousel-caption {
@@ -39,6 +41,13 @@ body {
   padding: 3%;
 }
 
+.nl-class {
+  background-color: #8BFFFF;
+  border-radius: 20px;
+  text-align: center;
+  margin: 0 10px;
+  width: 100px;
+}
 
 .textdecoration {
   text-decoration: underline;
@@ -47,6 +56,6 @@ body {
 }
 
 .heading1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 800;
 }
