--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   background-image: url("../images/indexbg.png");
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
 }
 
 
